[package]
name = "kenzu"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/kenzu"
readme = "README.md"
exclude = [
    "tests/*",
    "tests",
    "main.rs"
]
categories = ["development-tools", "rust-patterns"]
description = "Procedural macros for builder pattern generation and validation"
keywords = ["builder", "derive", "macro", "setter", "struct"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/kenzu"
documentation = "https://docs.rs/kenzu"

[lib]
proc-macro = true

[dependencies]
syn =  "2"
quote = "1"
proc-macro2 =  "1"
mokuya = "0.0.7"

[dev-dependencies]
regex = "1"